--- a/RFpipeline.ipynb
+++ b/RFpipeline.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f1fe5938",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,8 @@
     "\n",
     "EPS = 1e-6\n",
     "\n",
-    "folder = r'Data/ES'"
+    "#folder = r'Data/ES'\n",
+    "folder = r'Data/PS'"
    ]
   },
   {
@@ -82,35 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "1ec45b45",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Repositories\\PeatlandForest_RF\\motti_tools.py:294: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  raw['year'].iloc[k] += 1\n",
-      "c:\\Repositories\\PeatlandForest_RF\\motti_tools.py:295: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  raw['DomAge'].iloc[k] += 1\n",
-      "c:\\Repositories\\PeatlandForest_RF\\motti_tools.py:59: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for colname, col in df.iteritems():\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "restoring to open!\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -355,7 +331,7 @@
     "# simulations in 'folder'\n",
     "sims = [name for name in os.listdir(folder) if os.path.isdir(os.path.join(folder, name))]\n",
     "M = len(sims)\n",
-    "for k in range(0,M):\n",
+    "for k in range(1,M):\n",
     "    s = sims[k]\n",
     "\n",
     "    # -- coding for computing soil fluxes in forestry and restoration\n",
@@ -433,6 +409,27 @@
     "#     plt.plot(f3[c], 'k.-', label=rtype[2])   \n",
     "#     plt.legend()\n",
     "#     plt.title(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "51df7d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
    ]
   },
   {
